k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nextjs-pipelines
  labels:
    app: nextjs-pipelines
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: nextjs-pipelines
