k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nextjs-pipelines
  labels:
    app: nextjs-pipelines
    app.openshift.io/runtime: nodejs
spec:
  to:
    kind: Service
    name: nextjs-pipelines
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
